# PtyLabX

./: .gitignore  CLAUDE.md  README.md  demo.ipynb  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.local.md  CLAUDE.md  DESIGN.md  ROADMAP.md  ideas.md  logging.md  settings.local.json  todo.md  ty-fixes.md
.github/workflows/: ci.yml  formatter.yml  test.yml
PtyLab/Engines/: BaseEngine.py  mPIE.py
PtyLabX/: __init__.py  _types.py
PtyLabX/AutoDiff/: __init__.py  _propagators.py  _state.py  losses.py  optimizers.py  propagators.py  reconstructor.py  regularizers.py  state.py
PtyLabX/Engines/: BaseEngine.py  GradientEngine.py  OPR.py  __init__.py  _jit_kernels.py  aPIE.py  e3PIE.py  ePIE.py  ePIE_TV.py  ePIE_mw.py  mPIE.py  mPIE_mw.py  mPIE_tv.py  mqNewton.py  multiPIE.py  pcPIE.py  qNewton.py  test_BaseEngine.py  zPIE.py
PtyLabX/ExperimentalData/: ExperimentalData.py  __init__.py
PtyLabX/GridGeneration/: FermatGridGenerator.py
PtyLabX/Monitor/: Monitor.py  Plots.py
PtyLabX/Operators/: Operators.py  __init__.py  _propagation_kernels.py  off_axis_sas.py  propagator_utils.py  test_Operators.py
PtyLabX/Params/: Params.py
PtyLabX/ProbeEngines/: OPRP.py  StandardProbe.py  test_OPRP.py  test_StandardProbe.py
PtyLabX/Reconstruction/: CalibrationFPM.py  Reconstruction.py
PtyLabX/Regularizers/: __init__.py  test___init__.py
PtyLabX/config/: __init__.py
PtyLabX/io/: readExample.py  readHdf5.py
PtyLabX/utils/: alignment.py  downloader.py  fsvd.py  gpuUtils.py  initializationFunctions.py  scanGrids.py  test_initializationFunctions.py  utils.py  visualisation.py
docs/: index.md
docs/cpm/: configuration.md  data-format.md  engines.md  overview.md
docs/getting-started/: installation.md  quickstart.md
docs/tutorials/: 02_tutorial_CPM_example_data.ipynb  (+8 more)
example_scripts/: exampleGridGenerator.py  exampleLoader.py  exampleReconstructionCPM.py  exampleReconstructionFPM.py  exampleReconstruction_ms_OPR.py  exampleReconstruction_pcPIE.py  example_demo_constraints.py  example_demo_propagators.py  example_mulit_slice.py  helical_beam.py  simulateData.py  simulateData_new_notready_for_release.py
jupyter_tutorials/: 01_tutorial_CPM_synthetic.ipynb  05_tutorial_CPM_LateralPositionCorrection.ipynb  08_tutorial_CPM_AD_demo.ipynb  jupyter_tutorials_tutorial_CPM.ipynb  jupyter_tutorials_tutorial_CPM_sim.ipynb  jupyter_tutorials_tutorial_FPM.ipynb  jupyter_tutorials_tutorial_LateralPositionCorrection.ipynb  jupyter_tutorials_tutorial_interferometricIntensityConstraint.ipynb  jupyter_tutorials_tutorial_reflectionPtychography.ipynb
tests/: conftest.py  test_autodiff.py  test_base_engine.py  test_engines.py  test_fsvd.py  test_gpu_utils.py  test_io.py  test_jax_device.py  test_jit_kernels.py  test_monitor.py  test_operators.py  test_probe_engines.py  test_reconstruction.py  test_regularizers.py  test_utils.py
(+14 files in other folders)
