[project]
name = "ptylabx"
version = "0.1.0"
description = "A cross-platform, open-source inverse modeling toolbox for conventional and Fourier ptychography"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "PtyLab Team" },
]
dependencies = [
    "numpy>=1.22",
    "matplotlib>=3.7",
    "h5py>=3.9",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "pyqtgraph>=0.13",
    "tables>=3.8",
    "bokeh>=3.2",
    "jax>=0.4",
    "PyQt5>=5.15",
    "optax>=0.2.7",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
dev = ["ruff", "ipykernel", "ipython"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["PtyLabX"]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
