[project]
name = "ptylabx"
version = "0.1.0"
description = "A cross-platform, open-source inverse modeling toolbox for conventional and Fourier ptychography"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "PtyLab Team" },
]
dependencies = [
    "numpy>=1.22",
    "matplotlib>=3.7",
    "h5py>=3.9",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "pyqtgraph>=0.13",
    "jax>=0.8",
    "PyQt5>=5.15",
    "optax>=0.2.7",
    "jaxtyping>=0.2.28",
    "equinox>=0.13.6",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
cuda13 = ["jax[cuda13]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["PtyLabX"]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "beartype>=0.18",
    "ruff",
    "ipykernel",
    "ipython",
    "ipywidgets",
    "pytest>=9.0.2",
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5",
    "mkdocs-jupyter>=0.25",
]

